# Agentic-AI

./: README.md  requirements.txt
CrewAI/: README.md
CrewAI/FinancialResearcher/: README.md
CrewAI/FinancialResearcher/src/financial_researcher/: crew.py
CrewAI/FinancialResearcher/src/financial_researcher/config/: tasks.yaml
CrewAI/code_developer/: README.md  pyproject.toml  series_output.txt
CrewAI/code_developer/output/: code_and_output-Claude-4-sonnet.txt  code_and_output-gpt-4o-mini.txt
CrewAI/code_developer/src/code_developer/: crew.py  main.py
CrewAI/code_developer/src/code_developer/config/: agents.yaml
CrewAI/crew_debate/: README.md  pyproject.toml
CrewAI/crew_debate/output/: decide.md  oppose.md  propose.md
CrewAI/crew_debate/src/crew_debate/: crew.py  main.py
CrewAI/crew_debate/src/crew_debate/config/: agents.yaml
CrewAI/engineering_team/: README.md  pyproject.toml
CrewAI/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
CrewAI/engineering_team/src/engineering_team/: main.py
CrewAI/financial_researcher/output/: report.md
CrewAI/financial_researcher/src/financial_researcher/: crew.py  main.py
CrewAI/stock_picker/: pyproject.toml
CrewAI/stock_picker/output/: decision.md  research_report.json  trending_companies.json
CrewAI/stock_picker/src/stock_picker/: crew.py  main.py
DeepResearchApp/: deep_research.py  email_agent.py  planner_agent.py  research_manager.py  search_agent.py
DeepResearchApp/notebook/: dev.ipynb
Warmup/: README.md  dadjoker.ipynb  dadjoker.py  tech_bloger.ipynb
(+3 files in other folders)
