[project]
name = "code_developer"
version = "0.1.0"
description = "code_developer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.7.1",
]

[project.scripts]
code_developer = "code_developer.main:run"
run_crew = "code_developer.main:run"
train = "code_developer.main:train"
replay = "code_developer.main:replay"
test = "code_developer.main:test"
run_with_trigger = "code_developer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
