[project]
name = "crew_debate"
version = "0.1.0"
description = "crew_debate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
crew_debate = "crew_debate.main:run"
run_crew = "crew_debate.main:run"
train = "crew_debate.main:train"
replay = "crew_debate.main:replay"
test = "crew_debate.main:test"
run_with_trigger = "crew_debate.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
